Modifica scritta index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h3>How to Download the files needed from Instagram</h3>
     <ol>
         <li>Go to <a href="https://www.instagram.com" target="_blank">instagram.com</a> and log in to your account.</li>
-        <li>Go to <strong>Settings &gt; Accounts Center &gt; Your Information &gt; Download Your Information</strong>.</li>
+        <li>Go to <strong>Settings &gt; Accounts Center (META) &gt; Your Information &gt; Download Your Information</strong>.</li>
         <li>Select the <strong>HTML</strong> format, choose the data you want to download (search for followers), and send the request.</li>
         <li>When you receive the email from Meta, download the ZIP file and open it.</li>
         <li>Inside you will find the folders <strong>connections &gt; followers_and_following</strong>.</li>
